-- nike image change

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         </div>
         <div class="image-container">
             <div class="box design">
-                <img src="./images/img1.jpg" alt="">
+                <img src="./images/nike.png" alt="">
                 <div class="info">
                     <a href="https://shinezaw9531.github.io/nike/"><h3>Nike Title</h3></a>
                 </div>
