--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
                 </div>
             </div>
             <div class="box code">
-                <img src="./images/img2.jpg" alt="">
+                <img src="./images/IndexDB.png" alt="">
                 <div class="info">
-                    <h3>Project Title</h3>
+                    <a href="./others/IndexDB_CRUD/Index.html"><h3>IndexDB Title</h3></a>
                 </div>
             </div>
             <div class="box website">
