-- Edit experience context

--- a/index.html
+++ b/index.html
@@ -104,8 +104,12 @@
                     <p> MPGS (Master, Visa, JCB, UPI), CB Pay, MPU, Settlement File Daily Process</p>
                 </div>
                 <div class="exp-box">
-                    <h3>2C2P (Developer) (3-10-2022 - Present)</h3>
+                    <h3>2C2P (Developer) (3-10-2022 - 30-9-2023)</h3>
                     <p> MPU, SMS Gateway ,C#, ASP.Net, MSSQL, Jira, Confluence, Bitbucket, Sourcetree, Jenkins, Sonar Qube, Black Duck</p>
+                </div>
+                <div class="exp-box">
+                    <h3>Freelancer (2-10-2023 - Present)</h3>
+                    <p> HTML, CSS, JS, PHP, MySQL, Laravel, C#, Asp.net, MSSQL, Reactjs, Angular, React Native, Flutter</p>
                 </div>
             </div>
             <div class="box">
