-- Edit CV form download link

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         <!-- button -->
         <div class="download">
-            <a href="./images/Shine_Zaw_CV_Form.docx" class="btn" download target="_self">Download CV</a>
+            <a href="./images/Shine_Zaw_CV__Form.pdf" class="btn" download target="_self">Download CV</a>
         </div>
     </section>
 
