--- a/index.html
+++ b/index.html
@@ -108,8 +108,12 @@
                     <p> MPU, SMS Gateway ,C#, ASP.Net, MSSQL, Jira, Confluence, Bitbucket, Sourcetree, Jenkins, Sonar Qube, Black Duck</p>
                 </div>
                 <div class="exp-box">
-                    <h3>Freelancer (2-10-2023 - Present)</h3>
+                    <h3>Freelancer (2-10-2023 - 31-1-204)</h3>
                     <p> HTML, CSS, JS, PHP, MySQL, Laravel, C#, Asp.net, MSSQL, Reactjs, Angular, React Native, Flutter</p>
+                </div>
+                <div class="exp-box">
+                    <h3>Evokehub (FullStack Developer) (1-10-2024 - Present)</h3>
+                    <p> Asp.net core API, SOLID, SQL, MongoDB, Azure, Devexpress, Reactjs, Typescript </p>
                 </div>
             </div>
             <div class="box">
