--- a/index.html
+++ b/index.html
@@ -296,22 +296,22 @@
             <div class="box">
                 <a href="tel:+959791521549"><i class="fas fa-phone" aria-hidden="true"></i></a>
                 <h3>My Number</h3>
-                <p>+959 791 521 549</p>
+                <p>+66 098 659 0940</p>
             </div>
             <div class="box">
                 <a href="mailto:shinezaw.it@gmail.com"><i class="fas fa-envelope" aria-hidden="true"></i></a>
                 <h3>My Email</h3>
-                <p>shinezaw.it@gmail.com</p>
+                <p>shinezaw9531@gmail.com</p>
             </div>
             <div class="box">
                 <i class="fas fa-map-marker-alt" aria-hidden="true"></i>
                 <h3>My Address</h3>
-                <p>No410, Mya Yadanar(2) Street, North Okkalapa Township, Yangon</p>
+                <p>Lat Phrao 20 Alley, Khwaeng Chom Phon, Khet Chatuchak, Bangkok 10900</p>
             </div>
         </div>
 
         <div class="row">
-            <form action="mailto:shinezaw.it@gmail.com">
+            <form action="mailto:shinezaw9531@gmail.com">
                 <div class="inputBox">
                     <input type="text" placeholder="name" required>
                     <input type="email" placeholder="Email" required>
@@ -320,7 +320,7 @@
                 <textarea name="" id="" cols="30" rows="10" placeholder="message" required></textarea>
                 <button class="btn">Send Message</button>
             </form>
-            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2113.1523292862103!2d96.15311985511508!3d16.90674342913185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2smm!4v1671823984937!5m2!1sen!2smm" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="mylocation"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3506.2789221124845!2d100.56827847455949!3d13.805116796057908!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e29c4bb165dfd3%3A0xb91a247ed44ee1b2!2sLIB%20Condo!5e1!3m2!1sen!2sth!4v1747642710465!5m2!1sen!2sth" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
 
